--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ executors:
         resource_class: small
     sbt:
         docker:
-            - image: mozilla/sbt:8u212_1.2.8
+            - image: leapyear1/sbt:8u265-jdk-slim-buster_1.3.13
         environment:
             - JAVA_OPTS: -Xms4g -Xmx4g -XX:MaxMetaspaceSize=512M -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap
         working_directory: ~/src
@@ -14,11 +14,6 @@ jobs:
         executor: sbt
         steps:
             - checkout
-            - run:
-                command: |
-                    apt-get update
-                    apt-get install -y awscli
-                name: Install AWSCLI
             - run:
                 command: .circleci/setup_dasho.sh
                 name: Setup DashO
@@ -59,7 +54,7 @@ jobs:
         steps:
             - checkout
             - run:
-                command: curl https://pre-commit.com/install-local.py | python -
+                command: curl https://pre-commit.com/install-local.py | python3 -
                 name: Install pre-commit
             - restore_cache:
                 keys:
