--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,14 +19,16 @@ jobs:
                 name: Setup DashO
             - restore_cache:
                 keys:
-                    - v1-dependencies-{{ checksum "build.sbt" }}
-                    - v1-dependencies-
+                    - v2-dependencies-{{ checksum "build.sbt" }}
+                    - v2-dependencies-
             - run:
                 command: cat /dev/null | sbt -v clean update headerCheck compile package scripted
                 name: Compile jar and run tests
             - save_cache:
-                key: v1-dependencies-{{ checksum "build.sbt" }}
+                key: v2-dependencies-{{ checksum "build.sbt" }}
                 paths:
+                    - ~/.ivy2/cache
+                    - ~/.sbt
                     - ~/.m2
             - store_artifacts:
                 path: target
@@ -58,8 +60,8 @@ jobs:
                 name: Install pre-commit
             - restore_cache:
                 keys:
-                    - v1-lint-{{ checksum "build.sbt" }}
-                    - v1-lint-
+                    - v2-lint-{{ checksum "build.sbt" }}
+                    - v2-lint-
             - run:
                 command: |
                     cat /dev/null | sbt scalafmtAll
@@ -83,8 +85,10 @@ jobs:
                 name: post-lint diff
                 when: always
             - save_cache:
-                key: v1-lint-{{ checksum "build.sbt" }}
+                key: v2-lint-{{ checksum "build.sbt" }}
                 paths:
+                    - ~/.ivy2/cache
+                    - ~/.sbt
                     - ~/.m2
 orbs:
     circleci: circleci/circleci-cli@0.1.8
